--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -93,8 +93,8 @@
                 (don’t forget your Driver’s License, course fee is collected in cash or money order only)</p>
               <br>
               <div>
-                <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">View
-                    Schedule</a></h2>
+                <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Register for
+                    class</a></h2>
               </div>
 
             </div>
@@ -146,21 +146,69 @@
             <img class="card-img-top classes_images" src="/images/driver-manual-icon.png" alt="Card image cap">
             <div class="card-body">
               <h3>Failed DMV Test 3 Times Class/Permit Class (On-Line)</h3>
-              <p>If you have unfortunately failed a test at DMV three times while trying to acquire a Learners Permit
-                or reinstate your Driver License, this is the class that is required.
+              <p>If you have unfortunately failed a test at the Virginia DMV three times while trying to acquire a
+                Learners Permit or reinstate your Driver License, this is the class that is required.
               </p>
               <p>The Driver Manual Course / 3 Failures Class needs to be 8 hours of instruction to satisfy the DMV’s
                 requirements and is basically a highly concentrated study period. In this class we try to cover
-                everything that could possibly be asked on the test, as well as try to clear up any problems with
-                terminology or information that you might be having difficulty with.
+                everything
+                that could possibly be asked on the test, as well as preparing you to be as familiar as possible with
+                the
+                info contained in the DMV Manual.
               </p>
-              <p>We tailored this class to the DMV Drivers Manual and we stick to it. We will cover Signs and General
-                Knowledge and keep the information relevant to the DMV test. Our class is taught in-person by an
-                instructor at our facility in Woodbridge, VA in a clean, comfortable, and professional environment.
+              <p>Our class is taken and completed entirely on-line and is self-paced. The class does not have to be
+                completed at one time, you can complete as much or as little of the class in a day as you like. Once you
+                have completed the 8 Hour Driver Manual/3 Failures Permit Class, you will have an unlimited number of
+                chances to pass the test at the DMV.
               </p>
-              <p>Please do not hesitate to give us a call if you have any additional questions.
+              <h3 style="padding-top:40px;">
+                How to Register for the Class
+              </h3>
+
+              <ol>
+                <li>
+                  <p>1. The first step is to register for the class by clicking “Register for class” at the bottom of
+                    this
+                    section.
+                  </p>
+                </li>
+                <li>
+                  <p>2. As soon as we receive your registration, we will send you a link to make your payment.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    3. Once payment is made for the class, we will send you a link so you can register and access
+                    theclass
+                    anytime you like. The class is available for you to access 24 hours a day so that you maycomplete
+                    sections of the class whenever you are able to.
+                  </p>
+                </li>
+              </ol>
+
               </p>
-              <p>This Class is primarily for those that are 18 years old and older.
+              <p>As soon as your class is completed, we will send your completion certificate to your email as a PDF.
+                This
+                PDF must be downloaded to a computer or flash drive then printed. You can then take this certificate to
+                the DMV and resume testing for your Learners Permit/License. At this point you will have as many
+                opportunities to pass the test as needed.
+              </p>
+
+              <p>
+                The cost of the class is a flat fee of $125.00 (no additional fees or taxes)
+              </p>
+              <p>
+                We use PayPal to collect on-line payments, but you do not need a PayPal account. You can use any credit
+                or debit card.
+              </p>
+              <h3 style="padding-top:40px;">
+                Who is approved to take this online class?
+              </h3>
+              <p>
+                This class is approved by the Virginia DMV for ALL ages.
+              </p>
+              <p>
+                This class is primarily for those that are 18 years old and older.
               </p>
               <p>**If you are less than 18 years old and a required to take a class before returning to the DMV, you
                 can take this 8-hour Driver manual class if you have completed the 36 Hour classroom portion of Driver
@@ -169,10 +217,13 @@
                 that should have been issued upon completion of the 36-hour classroom when you were in 10th grade. If
                 you need one re-issued, the high school P.E. department will usually issue you a duplicate if
                 necessary.
-              </p>
+              <h3 style="padding-top:40px;">
+                Please do not hesitate to call us or send us an email if you have any questions! We are a local small
+                business, and your calls are answered by the staff of ADJ Driver Improvement Center.
+              </h3>
               <div>
-                <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">View
-                    Schedule</a></h2>
+                <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Register for
+                    class</a></h2>
               </div>
 
             </div>
@@ -241,8 +292,8 @@
               <p>NO OFRECEMOS clases de CDL o Motocicleta</p>
 
               <div>
-                <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Ver
-                    Horario</a></h2>
+                <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Registrarse
+                    para la clase</a></h2>
               </div>
 
             </div>
@@ -297,8 +348,8 @@
                 office at 703 730-8525.
               </p>
               <div>
-                <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">View
-                    Schedule</a></h2>
+                <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Register for
+                    class</a></h2>
               </div>
             </div>
           </div>
